--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
     <head>
         <title>Simple Chat</title>
         <link href="styles/main.css" type="text/css" rel="stylesheet">
+        <script defer src="http://localhost:4000/socket.io/socket.io.js"></script>
+        <script defer src="script.js"></script>
     </head>
     <body>
         <div class="main">
-            <h1 class="chat-header">You Joined</h1>
+            <h1 id="chat-header" class="chat-header">Waiting to join...</h1>
             <div id="message-container" class="chats-display"></div>
             <div class="input-container">
                 <form id="chat-form">
