--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Simple Chat</title>
         <link href="styles/main.css" type="text/css" rel="stylesheet">
-        <script defer src="http://localhost:4000/socket.io/socket.io.js"></script>
+        <script defer src="https://ka-chat-server-dev.herokuapp.com/socket.io/socket.io.js"></script>
         <script defer src="script.js"></script>
     </head>
     <body>
